Add new blog post

--- a/index.html
+++ b/index.html
@@ -297,14 +297,14 @@ permalink: /
                 <div class="row">
                     <div class="col-4">   
                         <div class="blog-card">   
-                            <a href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data">
+                            <a href="https://sybiltec.com/how-does-a-good-website-showcase-trust">
                                 <img src="images/Laptop-notepad-pen-and-iphone-on-table-350x183.jpg" 
                                 alt="Laptop notepad pen and iPhone on table"></a>
                             <div class="blog-card-text">                    
-                                <h3>Are You Inadvertently Abusing Your Customers' Data?</h3>
-                                <p>If you don't have a clearly defined purpose for processing your customers' data, it's time to start thinking about your website's privacy notice.</p>
+                                <h3>How Does a Good Website Showcase Trust?</h3>
+                                <p>Our recent LinkedIn poll indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? Today we examine six key areas you should consider.</p>
                                 <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data">Read Blog</a>   
+                                    <a class="btn-primary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust">Read Blog</a>   
                                 </div>
                             </div>
                         </div>
@@ -349,11 +349,8 @@ permalink: /
                 <div class="row">
                     <div class="col-4">
                         <h4>Google Digital Garage Certified</h4>
-                        <a href="https://sybiltec.com/uploads/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing.pdf"
-                            target="_blank">
                             <img src="https://sybiltec.com/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
                                 alt="Google Digital Garage The Fundamentals of Digital Marketing certificate">
-                        </a>
                     </div>
                     <div class="col-4">
                     <h4>Yoast Academy Certified</h4>
@@ -364,10 +361,8 @@ permalink: /
                     </div>
                     <div class="col-4">
                         <h4>The Complete 2022 Software Testing Bootcamp</h4>
-                        <a href="https://sybiltec.com/uploads/udemy-the-complete-2022-software-testing-bootcamp.pdf" target="_blank">
                             <img src="https://sybiltec.com/images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpeg"
                                 alt="Udemy The Complete 2022 Software Testing Bootcamp">
-                        </a>
                     </div>
                 </div>
             </div>
@@ -378,24 +373,22 @@ permalink: /
                 <hr>
                 <div class="row">
                     <div class="col-2">
-                        <a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer"><img src="images/logos/ShopifyPartners_Primary.png" alt="Shopify Partners"></a>
+                        <img src="images/logos/ShopifyPartners_Primary.png" alt="Shopify Partners">
                     </div>
                     <div class="col-2">
-                        <a href="https://bigcommerce.com" target="_blank" rel="noopener noreferrer"><img src="images/logos/BC_Wordmark_Black.png" alt="BigCommerce"></a>
+                        <img src="images/logos/BC_Wordmark_Black.png" alt="BigCommerce">
                     </div>
                     <div class="col-2">
-                        <a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow">
                             <img src="https://images-2.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_blue" alt="IONOS - Official Partner">
-                            </a>
                     </div>
                     <div class="col-2">
-                        <a href="https://wix.com" target="_blank" rel="noopener noreferrer"><img src="images/logos/wix_black.png" alt="Wix"></a>
+                        <img src="images/logos/wix_black.png" alt="Wix">
                     </div>
                     <div class="col-2">
-                        <a href="https://wordpress.org" target="_blank" rel="noopener noreferrer"><img src="images/logos/WordPress-logotype-alternative.png" alt="WordPress"></a>
+                        <img src="images/logos/WordPress-logotype-alternative.png" alt="WordPress">
                     </div>
                     <div class="col-2">
-                        <a href="https://cntassociates.com" target="_blank" rel="noopener noreferrer"><img src="images/logos/CNT-Associates.png" alt="CNT Associates"></a>
+                        <img src="images/logos/CNT-Associates.png" alt="CNT Associates">
                     </div>
                 </div>
             </div>
