--- a/blog.html
+++ b/blog.html
@@ -180,7 +180,7 @@ permalink: /blog/
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
+            <span id="year"></span> Sybiltec | Website designed and developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
