--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -209,7 +209,7 @@ permalink: /5-best-tools-for-remote-working/
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
+            <span id="year"></span> Sybiltec | Website designed and developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
