--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -199,7 +199,7 @@ permalink: /6-tips-for-surviving-remote-working/
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
+            <span id="year"></span> Sybiltec | Website designed and developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
