--- a/services.html
+++ b/services.html
@@ -227,7 +227,7 @@ permalink: /services/
             </div>
         </div>
         <div class="copyright section center"><p>Copyright &copy;           
-            <span id="year"></span> Sybiltec | Website developed by <a href="/">Sybiltec</a></p>
+            <span id="year"></span> Sybiltec | Website designed and developed by <a href="/">Sybiltec</a></p>
         </div>
         <script>
             function myFunction() {
