Remove trailing slashes from URLs

--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
         <meta property="og:title" content="Blog | London Website Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybiltec provides website development and e-commerce
         services for SMEs. Read my blog posts here." />
-        <meta property="og:url" content="https://sybiltec.com/blog/" />
+        <meta property="og:url" content="https://sybiltec.com/blog" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -32,7 +32,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybiltec.com/blog/" />
+        <link rel="canonical" href="https://sybiltec.com/blog" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
@@ -107,7 +107,7 @@
                 <h2>WebTip Wednesday Series Launched on Twitter</h2>
                 <p>"WebTip Wednesday" is a new series of tweets for website development. Be 
                     sure not to miss a tweet by following Sybiltec on Twitter: 
-                    <a href="https://twittwe.com/sybiltec" target="_blank" rel="noopener 
+                    <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener 
                     noreferrer">twitter.com/sybiltec</a>.</p>
                 <a href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter">Read More >></a>
                 <h2>5 Best Tools for Remote Working</h2>
