--- a/events.html
+++ b/events.html
@@ -20,7 +20,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Events | London Website Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides web design & development services to small businesses. See below to register for my events, webinars and workshops." />
-        <meta property="og:url" content="https://sybiltec.com/events/" />
+        <meta property="og:url" content="https://sybiltec.com/events" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -31,7 +31,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybiltec.com/events/" />
+        <link rel="canonical" href="https://sybiltec.com/events" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
@@ -114,7 +114,7 @@
 
                 <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/building-an-online-store-using-shopify-free-webinar-tickets-566376205477" target="_blank" rel="noopener noreferrer">Register Here</a></div> -->
 
-                <h2>Webinar: Regulators Are Watching Your Website: Creatively Manage Website Compliance</h2>
+                <!-- <h2>Webinar: Regulators Are Watching Your Website: Creatively Manage Website Compliance</h2>
                 <hr class="left-align">      
                 <p><strong>Date and time:</strong> Wed, 12 Apr 2023 11:00 - 12:00 BST</p>
                 <p><strong>Location:</strong> Online</p>
@@ -189,7 +189,7 @@
                 
                 <p>Contact: <a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com<a></p>
 
-                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/regulators-are-watching-your-website-creatively-manage-website-compliance-tickets-569817869587" target="_blank" rel="noopener noreferrer">Register Here</a></div>
+                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/regulators-are-watching-your-website-creatively-manage-website-compliance-tickets-569817869587" target="_blank" rel="noopener noreferrer">Register Here</a></div> -->
 
                 <h2>Workshop: Funding and Opportunities for E-commerce</h2>
                 <hr class="left-align">      
