--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Projects | London Website Design & Development | Sybiltec" />
         <meta property="og:description" content="A selection of Sybil Mayard's personal projects." />
-        <meta property="og:url" content="https://sybiltec.com/projects/" />
+        <meta property="og:url" content="https://sybiltec.com/projects" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -30,7 +30,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="10 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybiltec.com/projects/" />
+        <link rel="canonical" href="https://sybiltec.com/projects" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
