--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
         <meta property="og:title" content="Page Not Found | London Web Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
         for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
-        <meta property="og:url" content="https://sybiltec.com/404/" />
+        <meta property="og:url" content="https://sybiltec.com/404" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -32,7 +32,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="1 minute">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybiltec.com/404/" />
+        <link rel="canonical" href="https://sybiltec.com/404" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
