--- a/clients.html
+++ b/clients.html
@@ -19,7 +19,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Clients | London Web Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here." />
-        <meta property="og:url" content="https://sybiltec.com/clients/" />
+        <meta property="og:url" content="https://sybiltec.com/clients" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -30,7 +30,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybiltec.com/clients/" />
+        <link rel="canonical" href="https://sybiltec.com/clients" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
