--- a/faqs.html
+++ b/faqs.html
@@ -70,8 +70,7 @@
                 "name": "Can I see examples of your previous work?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text":"Of course, please see my <a href='https://sybiltec.com/clients'>Clients</a> and <a href='https://sybiltec.com/design'>Design</a> 
-                    page for examples of past work I have carried out for clients."
+                    "text":"Of course, please see my <a href='https://sybiltec.com/clients'>Clients</a> page for examples of past work I have carried out for clients."
                 }
             }, {
                 "@type": "Question",
@@ -117,7 +116,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="FAQs | London Website Design & Development | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides website development services for small businesses. Find the answers to your frequently asked questions (FAQs) here." />
-        <meta property="og:url" content="https://sybiltec.com/faqs/" />
+        <meta property="og:url" content="https://sybiltec.com/faqs" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -128,7 +127,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybiltec.com/faqs/" />
+        <link rel="canonical" href="https://sybiltec.com/faqs" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
@@ -213,8 +212,7 @@
                 <p>If you have an existing website and you require my maintenance services, I will request access to the platform. Once I receive the required permissions I will begin with the work. I will send you regular updates via email so that you are always aware of the status of the project.</p>
 
                 <h3>Can I see examples of your previous work?</h3>
-                <p>Of course, please see my <a href="https://sybiltec.com/clients">Clients</a> and 
-                    <a href="https://sybiltec.com/design">Design</a> page for examples of past work I have carried out for clients.</p>
+                <p>Of course, please see my <a href="https://sybiltec.com/clients">Clients</a> page for examples of past work I have carried out for clients.</p>
                 <h3>What are your qualifications?</h3>
                 <p>I hold an MSc in Computer Science from the <a href="https://www.kent.ac.uk" 
                     target="_blank" rel="noopener noreferrer">University of Kent</a>.</p>
