--- a/importance-of-contact-information-on-your-website.html
+++ b/importance-of-contact-information-on-your-website.html
@@ -139,9 +139,7 @@
 
                 <h2>Conclusion</h2>
                  
-                <p>A well-designed website with visible contact details helps to build trust and lets your customers access your business more easily. If you need support with improving the user experience of your website, we can help. Join our webinar on 12th April at 11am where we will be discussing how to create a trustworthy and compliant website. Register via the link below.</p>
-
-                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/regulators-are-watching-your-website-creatively-manage-website-compliance-tickets-569817869587" target="_blank" rel="noopener noreferrer">Register Now</a></div>
+                <p>A well-designed website with visible contact details helps to build trust and lets your customers access your business more easily. If you need support with improving the user experience of your website, we can help.</p>
 
             </div>
         </div>
