--- a/index.html
+++ b/index.html
@@ -373,12 +373,6 @@
                         <img src="images/logos/ShopifyPartners_Primary.png" alt="Shopify Partners">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/BC_Wordmark_Black.png" alt="BigCommerce">
-                    </div>
-                    <div class="col-2">
-                            <img src="https://images-2.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_blue" alt="IONOS - Official Partner">
-                    </div>
-                    <div class="col-2">
                         <img src="images/logos/wix_black.png" alt="Wix">
                     </div>
                     <div class="col-2">
@@ -386,6 +380,12 @@
                     </div>
                     <div class="col-2">
                         <img src="images/logos/CNT-Associates.png" alt="CNT Associates">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/logos/British-Library.png" alt="British Library">
+                    </div>
+                    <div class="col-2">
+                            <img src="images/logos/Business-&-IP-Centre-London.jpg" alt="Business & IP Centre London">
                     </div>
                 </div>
             </div>
