--- a/clients.html
+++ b/clients.html
@@ -108,6 +108,25 @@
                     </div>
                 </div>
 
+                <div id="encalife" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/clients/encalife.JPG" alt="encalife">
+                        </div>
+                        <div class="col-7">
+                            <h2>encalife</h2>
+                            <h3 style="font-size: 18px;">Experience the unusual, every day</h3>
+                            <ul>
+                                <li>Homepage and collection page design in GemPages</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://encalife.com/" 
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="pendle-witch-company" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
