--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             * that contains the map. 
             */
             #map {
-            height: 100%;
+            height: 300px;
             }
 
             /* 
