Publish WordPress updates blog

--- a/index.html
+++ b/index.html
@@ -315,7 +315,20 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
-                    <div class="col-4">   
+                    <div class="col-4">          
+                        <div class="blog-card">  
+                            <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website"><img src="images/update-software-app-350x183.jpg" 
+                                alt="Update software app"></a>  
+                            <div class="blog-card-text">               
+                                <h3>A Guide to Updating Your WordPress Website</h3>
+                                <p>If you own a WordPress website, the work doesn't end once your site has been launched. A WordPress website needs to be carefully maintained in order to keep it functioning well.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/guide-to-updating-your-wordpress-website">Read Blog</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-4">  
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/how-does-a-good-website-showcase-trust">
                                 <img src="images/Laptop-notepad-pen-and-iphone-on-table-350x183.jpg" 
@@ -341,19 +354,6 @@
                                 </div>
                             </div>
                         </div> 
-                    </div>
-                    <div class="col-4">          
-                        <div class="blog-card">  
-                            <a href="https://sybiltec.com/6-reasons-to-use-shopify"><img src="images/shopify-logo-window-with-plant-350x183.jpg" 
-                                alt="Shopify logo window with plant"></a>  
-                            <div class="blog-card-text">               
-                                <h3>7 Reasons Why You Should be Using Shopify</h3>
-                                <p>Are you planning to sell your products or services online? Consider choosing Shopify, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/6-reasons-to-use-shopify">Read Blog</a>   
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
