--- a/projects.html
+++ b/projects.html
@@ -81,20 +81,8 @@
             </div>
         </div>
         <div class="main section">
-            <div class="container-1140" id="vidcareer">
-
-                <h2 class="padding-top">x-blu</h2>
-                <hr class="left-align">
-
-                <p class="padding-top">x-blu was formed in 2021 and are avant-garde punkists who play out like Joy Division meets Nico. Their influences include The Velvet Underground, New Order, Sam Fender, The Doves and 70s disco/funk.</p>
-
-                <p>After a long break from music, I returned to the industry to join x-blu, bringing both my musical skills and my experience of digital services and music production to the band.</p>
-
-                <p>I play an active role in x-blu as the keyboard player and Digital Director, and have also developed their <a href="https://x-blu.com/" target="_blank" rel="noopener noreferrer">website</a>. My skills compliment the creative, vocal and musical skills of Dani Tagen (vocals, production and Creative Director) and the musicianship and production skills of Gary Parker (guitar, keyboards, vocals and production) and add a distinct digital dimension to the band's unique sound.</p>
-
-                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://x-blu.com/" target="_blank" rel="noopener noreferrer">Visit x-blu</a></div>
-
-                <h2 class="padding-top">VidCareer</h2>
+            <div class="container-1140">
+                <h2 class="padding-top" id="vidcareer">VidCareer</h2>
                 <hr class="left-align">
 
                 <p class="padding-top">VidCareer has been my biggest achievement so far. It's a start-up idea that began during my time at the <a href="https://www.kent.ac.uk/" target="_blank" rel="noopener noreferrer">University of Kent</a>. VidCareer is a recruitment platform that helps small businesses connect with candidates via online career events - like careers fairs - but delivered virtually. There are clear benefits for both parties: less time and money spent on networking events, and it's kinder to the environment too.</p>
@@ -121,7 +109,7 @@
 
                 <div class="padding-top"><a class="btn-primary" href="https://vidcareer.github.io" target="_blank" rel="noopener noreferrer">Visit VidCareer Website</a></div>
 
-                <h2 class="padding-top">An Android App for an Educational Poker Platform</h2>
+                <h2 class="padding-top" id="android">An Android App for an Educational Poker Platform</h2>
                 <hr class="left-align">
                 <p class="padding-top">For my final MSc project at the <a href="https://www.kent.ac.uk" 
                     target="_blank" rel="noopener noreferrer">University of Kent</a>, 
@@ -142,7 +130,7 @@
                     <p>The app is not yet available for download, as the algorithm is in the 
                     process of being improved for efficiency and accuracy.</p>
 
-                <h2 class="padding-top">TagNav</h2>
+                <h2 class="padding-top" id="tagnav">TagNav</h2>
                 <hr class="left-align">
                 <p class="padding-top">TagNav is an app concept that was developed by two students (Asha Burathoki, 
                     Olcay Kilincci) and I, during our time at the <a href="https://www.kent.ac.uk/" 
@@ -171,7 +159,7 @@
                         <p>Students reach final of start-up competition at the University of Kent</p>
                     </div> 
 
-                <h2 class="padding-top">My Personal Portfolio</h2>
+                <h2 class="padding-top" id="portfolio">My Personal Portfolio</h2>
                 <hr class="left-align">
                 <p class="padding-top">My first project was a personal website built in WordPress. Please view the 
                     site by clicking the button below.</p>
