Add date published to blogs

--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -94,6 +94,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <p><strong>Date published: 29 September 2020</strong></p>
                 <p>Are you planning to sell your products or services online? Consider choosing 
                     <a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
                         Shopify</a>, one of the most popular e-commerce platforms. Here I present to 
