--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -94,6 +94,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <p><strong>Date published: 27 March 2020</strong></p>
                 <p>Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it's essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively.</p>
 
                 <h2>Optimise Your Technology</h2>
