--- a/webtip-wednesday-series-launched-on-twitter.html
+++ b/webtip-wednesday-series-launched-on-twitter.html
@@ -94,6 +94,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <p><strong>Date published: 01 July 2020</strong></p>
                 <p>I am pleased to announce that my new series "WebTip Wednesday" has just begun 
                     on Twitter. Every Wednesday morning at 9:30am, I will tweet a useful tip that 
                     will help you with different aspects of website development. Areas include 
