Update key skills

--- a/about.html
+++ b/about.html
@@ -139,40 +139,36 @@
                         <div class="col-3"><i class="far fa-calendar-alt"></i><h3 class="smaller">Acuity</h3></div>
                         <div class="col-3"><i class="far fa-image"></i><h3 class="smaller">Adobe Photoshop</h3></div>
                         <div class="col-3"><i class="fa-solid fa-cart-shopping"></i><h3 class="smaller">BigCommerce</h3></div>
-                        <div class="col-3"><i class="fa-solid fa-capsules"></i><h3 class="smaller">Capsule CRM</h3></div>
+                        <div class="col-3"><i class="fab fa-css3-alt"></i><h3 class="smaller">CSS</h3></div>
                     </div>
                     <div class="row center">
-                        <div class="col-3"><i class="fab fa-css3-alt"></i><h3 class="smaller">CSS</h3></div>
                         <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">Divi</h3></div>
                         <div class="col-3"><i class="fab fa-elementor"></i><h3 class="smaller">Elementor</h3></div>
+                        <div class="col-3"><i class="fa-brands fa-figma"></i><h3 class="smaller">Figma</h3></div>
                         <div class="col-3"><i class="fas fa-chart-line"></i><h3 class="smaller">Google Analytics</h3></div>
                     </div>
                     <div class="row center">
-                        <div class="col-3"><i class="fas fa-vials"></i><h3 class="smaller">Google Optimize</h3></div>
-                        <div class="col-3"><i class="fas fa-code"></i><h3 class="smaller">HTML</h3></div>
                         <div class="col-3"><i class="fab fa-hotjar"></i><h3 class="smaller">Hotjar</h3></div>
+                        <div class="col-3"><i class="fas fa-code"></i><h3 class="smaller">HTML</h3></div>
                         <div class="col-3"><i class="fab fa-hubspot"></i><h3 class="smaller">HubSpot</h3></div>
+                        <div class="col-3"><i class="fab fa-js"></i><h3 class="smaller">JavaScript</h3></div>
                     </div>
                     <div class="row center">
-                        <div class="col-3"><i class="fab fa-js"></i><h3 class="smaller">JavaScript</h3></div>
                         <div class="col-3"><i class="fa-solid fa-graduation-cap"></i><h3 class="smaller">LearnDash</h3></div>
                         <div class="col-3"><i class="fab fa-mailchimp"></i><h3 class="smaller">Mailchimp</h3></div>
                         <div class="col-3"><i class="far fa-envelope"></i><h3 class="smaller">MailerLite</h3></div>
+                        <div class="col-3"><i class="fab fa-php"></i><h3 class="smaller">PHP</h3></div>
                     </div>
                     <div class="row center">
-                        <div class="col-3"><i class="fab fa-php"></i><h3 class="smaller">PHP</h3></div>
                         <div class="col-3"><i class="fas fa-tools"></i><h3 class="smaller">Shogun</h3></div>
                         <div class="col-3"><i class="fab fa-shopify"></i><h3 class="smaller">Shopify</h3></div>
-                        <div class="col-3"><i class="fab fa-squarespace"></i><h3 class="smaller">Squarespace</h3></div>
-                    </div>
-                    <div class="row center">
                         <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">Tatsu</h3></div>
                         <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">Unbounce</h3></div>
-                        <div class="col-3"><i class="fab fa-wix"></i><h3 class="smaller">Wix</h3></div>
-                        <div class="col-3"><i class="fa-solid fa-cart-shopping"></i><h3 class="smaller">WooCommerce</h3></div>
-                        
                     </div>
                     <div class="row center">
+                        <div class="col-3"><i class="fab fa-wix"></i><h3 class="smaller">Wix</h3></div>
+                        <div class="col-3"><i class="fa-solid fa-cart-shopping"></i><h3 class="smaller">WooCommerce</h3></div>
+                        <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">WP Bakery</h3></div>
                         <div class="col-3"><i class="fab fa-wordpress"></i><h3 class="smaller">WordPress</h3></div>
                     </div>
                 </div>
