--- a/events.html
+++ b/events.html
@@ -60,7 +60,7 @@
                                     <div class="topnav" id="myTopnav">
                                         <a href="https://sybiltec.com/services">Services</a>
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/events">Events</a>
+                                        <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
@@ -83,7 +83,8 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>Webinar: Funding & Support for Shopify and Other E-commerce Platforms</h2>
+                <p>There are no upcoming events to display.</p>
+                <!-- <h2>Webinar: Funding & Support for Shopify and Other E-commerce Platforms</h2>
                 <hr class="left-align">   
                 
                 <p><strong>Date and time:</strong> Thu, 11 May 2023 11:00 - 12:30 BST</p>
@@ -115,8 +116,7 @@
                 <p>Gary Parker, Managing Director of CNT Associates, a London-based business support/fundraising consultancy, with over 20 years' experience of business support.</p>
                 <p>Sybil Mayard, founder of Sybiltec, helping small businesses to improve their online presence through better web design.</p>
 
-                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/funding-support-for-shopify-other-e-commerce-platforms-tickets-601312310307" target="_blank" rel="noopener noreferrer">Register Here</a></div>
-
+                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/funding-support-for-shopify-other-e-commerce-platforms-tickets-601312310307" target="_blank" rel="noopener noreferrer">Register Here</a></div> -->
             </div>
         </div>
         <div class="contact section">
