--- a/cyber-security-best-practices-for-business.html
+++ b/cyber-security-best-practices-for-business.html
@@ -75,7 +75,7 @@
                                     <div class="topnav" id="myTopnav">
                                         <a href="https://sybiltec.com/services">Services</a>
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/events">Events</a>
+                                        <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
