Remove social media

--- a/blog.html
+++ b/blog.html
@@ -107,12 +107,12 @@
                     skills are not necessary to make your store look unique and fabulous! Shopify 
                     offers a selection of …</p>
                 <a href="https://sybiltec.com/6-reasons-to-use-shopify">Read More >></a>
-                <h2>WebTip Wednesday Series Launched on Twitter</h2>
+                <!-- <h2>WebTip Wednesday Series Launched on Twitter</h2>
                 <p>"WebTip Wednesday" is a new series of tweets for website development. Be 
                     sure not to miss a tweet by following Sybiltec on Twitter: 
                     <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener 
                     noreferrer">twitter.com/sybiltec</a>.</p>
-                <a href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter">Read More >></a>
+                <a href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter">Read More >></a> -->
                 <h2>5 Best Tools for Remote Working</h2>
                 <p>With an overwhelming amount of tools available today, it can be a difficult 
                     task finding the best ones, especially if you are unfamiliar with working 
@@ -165,12 +165,12 @@
                             <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                            <!-- <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-twitter"></i></a>
                             <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i></a>
 			                <a href="https://facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-brands fa-facebook"></i></a>
+                                <i class="fa-brands fa-facebook"></i></a> -->
                         </p>                       
                     </div>
                 </div>
