--- a/importance-of-contact-information-on-your-website.html
+++ b/importance-of-contact-information-on-your-website.html
@@ -180,12 +180,12 @@
                             <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                            <!-- <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-twitter"></i></a>
                             <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i></a>
 			                <a href="https://facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-brands fa-facebook"></i></a>
+                                <i class="fa-brands fa-facebook"></i></a> -->
                         </p>                       
                     </div>
                 </div>
